Exposing library in root of the project (+min version)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 example/dnaism.v1.js
-dnaism.v1.js
+example/stocks
 node_modules/
 tests/dnaism.test.js
 example/depth/*.bed
 example/depth/bak/
 example/depth/index.html
+tests/playground
