Modify makefile to unpack and serve example app.

--- a/example/depth/Makefile
+++ b/example/depth/Makefile
@@ -1,11 +1,20 @@
 #
+all: beds index.html serve
+
+beds:
+	tar -jxvf depth.beds.tar.bz2
+
 index.html: index.template.html
 	./gen_html.py > $@
 
 from_server:
 	./from_server.sh
 
-listen:
+serve:
+	@echo "point browser your browser here: http://localhost:8888"
 	python3 -m http.server 8888
 
-.phony: listen from_server
+clean:
+	rm -f *.bed
+
+.phony: from_server serve beds clean
