Putting styles in its own file.

--- a/example/depth/Makefile
+++ b/example/depth/Makefile
@@ -12,10 +12,10 @@ from_server:
 	./from_server.sh
 
 serve:
-	@echo "point browser your browser here: http://localhost:8888"
-	python3 -m http.server 8888
+	@echo "--> point browser your browser here: http://localhost:8888"
+	python -m SimpleHTTPServer 8888
 
 clean:
 	rm -f *.bed index.html
 
-.phony: from_server serve beds clean
+.phony: checks from_server serve beds clean
